solve the security issue